--- a/index.html
+++ b/index.html
@@ -807,17 +807,28 @@ console.log(friendsInfo2.total_count);
         .text("LONGITUDE: " + tagInfo3.location.longitude + " " + "," + " " + "LATITUDE: " + tagInfo3.location.latitude)
         .style("font", "10px 'stellar'")
         .style("fill", "black");
-        console.log(yTP);
 
         }//end of for loop for tagged places
 
 
-    console.log(response.friends);
     var friendsInfo = response.friends;
-    console.log(friendsInfo.summary); 
     var friendsInfo2 = friendsInfo.summary;
-    console.log(friendsInfo2.total_count); 
+    //console.log(friendsInfo2.total_count); 
 
+        canvas.append("text")
+        .attr("x", 50)
+        .attr("y", (yStart + (spacer*195)))//needs to calculate space that was taken up above
+        .text("YOUR INFLUENCE: ")
+        .style("font", "30px 'stellar'")
+        .style("fill", "black");
+
+
+        canvas.append("text")
+        .attr("x", 100)
+        .attr("y", (yStart + (spacer*195)) + 100)//needs to calculate space that was taken up above
+        .text("FRIEND COUNT: " + friendsInfo2.total_count)
+        .style("font", "30px 'stellar'")
+        .style("fill", "black");
 
       // var button2 = canvas.append("svg:image")
       //   .attr('x', 50)
