ADD TEXT TO BUTTON

--- a/index.html
+++ b/index.html
@@ -832,12 +832,12 @@ function generalVis(){
         .attr('height', 90)
         .attr("xlink:href", "button.png");
 
-      //       canvas.append("text")
-      //         .attr("x", 80)//+30
-      //         .attr("y", 885)
-      //         .text("ADVERTISERS")
-      //         .style("font", "25px 'stellar'")
-      //         .style("fill", "black");
+            canvas.append("text")
+              .attr("x", 80)//+30
+              .attr("y", (yStart + (spacer*195)) + 150)
+              .text("CONTINUE")
+              .style("font", "25px 'stellar'")
+              .style("fill", "black");
 
     	svg.on('click', function() {
   		//console.log("You clicked")
