--- a/index.html
+++ b/index.html
@@ -844,7 +844,10 @@ function generalVis(){
   //     endVis(); 
 		// });
 
-     newButton.onclick = function() {endVis()};
+     newButton.onclick = function() {
+      console.log("click click"); 
+      endVis(); 
+    };
 
       });//end of api function 
 
