--- a/index.html
+++ b/index.html
@@ -839,15 +839,15 @@ function generalVis(){
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
-  //   	svg.on('click', function() {
-  // 		//console.log("You clicked")
-  //     endVis(); 
-		// });
-
-     newButton.onclick = function() {
-      console.log("click click"); 
+    	newButton.on('click', function() {
+  		console.log("You clicked")
       endVis(); 
-    };
+		});
+
+    //  newButton.onclick = function() {
+    //   console.log("click click"); 
+    //   endVis(); 
+    // };
 
       });//end of api function 
 
