--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@ function generalVis(){
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
-      var newButton = canvas.append("svg:image")
+      var newButton = canvas.append("rect")
         .attr('x', 50)
         .attr('y', (yStart + (spacer*195)) + 150) 
         .attr('width', 180)
