--- a/index.html
+++ b/index.html
@@ -839,10 +839,17 @@ function generalVis(){
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
-    	newButton.on('click', function() {
-  		console.log("You clicked")
-      endVis(); 
-		});
+  //   	newButton.on('click', function() {
+  // 		console.log("You clicked")
+  //     endVis(); 
+		// });
+
+
+newButton.on('click', function(d, i) {
+    console.log("You clicked", d), i;
+  endVis();
+
+});
 
     //  newButton.onclick = function() {
     //   console.log("click click"); 
