--- a/index.html
+++ b/index.html
@@ -845,16 +845,13 @@ function generalVis(){
 		// });
 
 
-// newButton.on('click', function(d, i) {
-//     console.log("You clicked", d), i;
-//   endVis();
+newButton.on("click", function(d, i) {
+    console.log("You clicked", d), i;
+  endVis();
 
-// });
+});
 
-newButton.on("click" ()=>{
-    d3.event.preventDefault();
-    console.log("line");
-}); 
+
 
       });//end of api function 
 
