--- a/index.html
+++ b/index.html
@@ -845,10 +845,10 @@ function generalVis(){
 		// });
 
       var newButton2 = canvas.append("rect")
-        .attr('x', 200)
-        .attr('y', (yStart + (spacer*195)) + 150) 
-        .attr('width', 180)
-        .attr('height', 90)
+        .attr("x", 200)
+        .attr("y", (yStart + (spacer*195)) + 150) 
+        .attr("width", 180)
+        .attr("height", 90)
         .style("fill", "black");
 
 newButton2.on('click', function(d, i) {
