--- a/index.html
+++ b/index.html
@@ -851,8 +851,14 @@ function generalVis(){
         .attr("height", 90)
         .style("fill", "black");
 
-newButton2.on('click', function(d, i) {
-    console.log("You clicked", d), i;
+// newButton2.on('click', function(d, i) {
+//     console.log("You clicked", d), i;
+//   endVis();
+
+// });
+
+newButton2.on('click', function() {
+    console.log("You clicked");
   endVis();
 
 });
