--- a/index.html
+++ b/index.html
@@ -905,6 +905,6 @@ function fbLogout() {
 <div id = "status"></div>
 <button class = "button" id="login" onclick = "login()">Login to Facebook</button>
 <button id="fbLogout" onclick="fbLogout()">Logout</button> 
-<button onclick= "endVis()">Continue</button> 
+<button onclick= "endVis();">Continue</button> 
 </body>
 </html> 
