--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@ function generalVis(){
               .style("font", "25px 'stellar'")
               .style("fill", "black");
 
-    	newButton.on('click', function() {
+    	svg.on('click', function() {
   		console.log("You clicked")
       endVis(); 
 		});
@@ -905,6 +905,6 @@ function fbLogout() {
 <div id = "status"></div>
 <button class = "button" id="login" onclick = "login()">Login to Facebook</button>
 <button id="fbLogout" onclick="fbLogout()">Logout</button> 
-<button onclick= "endVis();">Continue</button> 
+<button onclick="endVis()">Continue</button>
 </body>
 </html> 
