--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       left:50px;
     }
 
-/*        .button2 {
+        .button2 {
       background-color: #3b5998;
       border: none;
       color: white;
@@ -47,7 +47,7 @@
       border-radius: 2px;
       top:160px;
       left:1050px;
-    }*/
+    }
 
     .img{
       position:absolute;
@@ -885,10 +885,19 @@ function endVis(){
 
 
 function fbLogout() {
-        FB.logout(function (response) {
-            //Do what ever you want here when logged out like reloading the page
-            window.location.reload();
-        });
+
+    FB.getLoginStatus(function(response) {
+    console.log(response);
+    if (response && response.status === 'connected') {
+      FB.logout(function(response) {
+        window.location.reload();
+      });
+    }
+  });
+        // FB.logout(function (response) {
+        //     //Do what ever you want here when logged out like reloading the page
+        //     window.location.reload();
+        // });
     }
 
 
@@ -904,7 +913,6 @@ function fbLogout() {
 <p id="Wtext"> Welcome to the exhibition Identity 2.0. By logging into Facebook you give us premission to use your data to generate visulisations. These visulisations will help you explore your digital Identity! </p>
 <div id = "status"></div>
 <button class = "button" id="login" onclick = "login()">Login to Facebook</button>
-<button id="fbLogout" onclick="fbLogout()">Logout</button> 
-<button onclick="endVis()">Continue</button>
+<button class = "button2" id="fbLogout" onclick="fbLogout()">Logout</button> 
 </body>
 </html> 
