--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@
       left:1000px;
     }
 
+
+            .button3 {
+      background-color: #000000;
+      border: none;
+      color: white;
+      padding: 10px 60px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      position:absolute;
+      border-radius: 2px;
+      top:500px;
+      left:1000px;
+    }
+
     .img{
       position:absolute;
       top:600px;
@@ -914,5 +932,6 @@ function fbLogout() {
 <div id = "status"></div>
 <button class = "button" id="login" onclick = "login()">Login to Facebook</button>
 <button class = "button2"id="fbLogout" onclick="fbLogout()">Logout</button> 
+<button class = "button3"id="next" onclick="endVis()">Continue</button> 
 </body>
 </html> 
