--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
       border-radius: 2px;
       top:500px;
       left:1000px;
+      width: 180px;
+      height:90px;
+      src:"button.png";
     }
+
 
     .img{
       position:absolute;
