--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
       font-size: 16px;
       margin: 4px 2px;
       cursor: pointer;
-      position:absolute;
+      position:bottom;
       border-radius: 2px;
-      top:500px;
       left:1000px;
     }
 
