--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
       display: inline-block;
       font-size: 16px;
       margin: 4px 2px;
-      cursor: pointer;
-      position:bottom;
       border-radius: 2px;
+      cursor: pointer;
+      position:bottom - 50px;
+
     }
 
 
