--- a/index.html
+++ b/index.html
@@ -843,24 +843,24 @@ function generalVis(){
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
-      var newButton = canvas.append("svg:image")
-        .attr('x', 50)
-        .attr('y', (yStart + (spacer*195)) + 150) 
-        .attr('width', 180)
-        .attr('height', 90)
-        .attr("xlink:href", "button.png");
+  //     var newButton = canvas.append("svg:image")
+  //       .attr('x', 50)
+  //       .attr('y', (yStart + (spacer*195)) + 150) 
+  //       .attr('width', 180)
+  //       .attr('height', 90)
+  //       .attr("xlink:href", "button.png");
 
-            canvas.append("text")
-              .attr("x", 93)//+30
-              .attr("y", (yStart + (spacer*195)) + 205)
-              .text("CONTINUE")
-              .style("font", "25px 'stellar'")
-              .style("fill", "black");
+  //           canvas.append("text")
+  //             .attr("x", 93)//+30
+  //             .attr("y", (yStart + (spacer*195)) + 205)
+  //             .text("CONTINUE")
+  //             .style("font", "25px 'stellar'")
+  //             .style("fill", "black");
 
-    	svg.on('click', function() {
-  		console.log("You clicked")
-      endVis(); 
-		});
+  //   	svg.on('click', function() {
+  // 		console.log("You clicked")
+  //     endVis(); 
+		// });
 
       });//end of api function 
 
