--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
       display: inline-block;
       font-size: 16px;
       margin: 4px 2px;
-      border-radius: 2px;
       cursor: pointer;
+      position:absolute;
+      border-radius: 2px;
+      top:300px;
+      left:1000px;
 
     }
 
