--- a/index.html
+++ b/index.html
@@ -874,6 +874,10 @@ function generalVis(){
 
 function endVis(){
 
+      var canvas = d3.select("body").append("svg")
+      .attr("width", width)
+      .attr("height", height); //how can I adjust this to be adjustable to someones data 
+
 	var fontS = 40; 
 	var spaceF = 30; 
 	var yP = 80; 
@@ -883,7 +887,7 @@ function endVis(){
         .attr("x", 0)
         .attr("y", 0)
         .attr("width", width)
-        .attr("height", 1000)
+        .attr("height", height)
         .style("fill", "white");
 
     var text = canvas.append("text")
