--- a/index.html
+++ b/index.html
@@ -878,6 +878,8 @@ function endVis(){
 	var spaceF = 30; 
 	var yP = 80; 
 
+   window.scrollBy(0, 10300);
+
 	document.getElementById('status').style.visibility = 'hidden';
     var rect = canvas.append("rect")
         .attr("x", 0)
