--- a/index.html
+++ b/index.html
@@ -874,6 +874,9 @@ function generalVis(){
 
 function endVis(){
 
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+
 	var fontS = 40; 
 	var spaceF = 30; 
 	var yP = 80; 
