--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ banner();
 
 
 FB.getLoginStatus(function(response) {
+document.getElementById('logout').style.visibility = 'hidden';
 	if(response.status === 'connected'){
 		document.getElementById('status');
     //newPage();
@@ -151,6 +152,7 @@ FB.getLoginStatus(function(response) {
    }(document, 'script', 'facebook-jssdk'));
 
   function login(){
+document.getElementById('logout').style.visibility = 'hidden';
   	FB.login(function (response) {
   			if(response.status === 'connected'){
 		document.getElementById('status');
