--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@ banner();
 
 
 FB.getLoginStatus(function(response) {
-document.getElementById('logout').style.visibility = 'hidden';
 	if(response.status === 'connected'){
 		document.getElementById('status');
     //newPage();
@@ -127,11 +126,11 @@ document.getElementById('logout').style.visibility = 'hidden';
     document.getElementById('Wtext').style.visibility = 'hidden';}
 		else if(response.status === 'not_authorized'){
 			document.getElementById('status').innerHTML = 'we are not logged in';
-      //document.getElementById('logout').style.visibility = 'hidden';
+      document.getElementById('logout').style.visibility = 'hidden';
     }
 			else {
 				document.getElementById('status').innerHTML = ' You are not logged into facebook';
-        //document.getElementById('logout').style.visibility = 'hidden'
+        document.getElementById('logout').style.visibility = 'hidden'
       }
 			
 		})
@@ -152,7 +151,6 @@ document.getElementById('logout').style.visibility = 'hidden';
    }(document, 'script', 'facebook-jssdk'));
 
   function login(){
-document.getElementById('logout').style.visibility = 'hidden';
   	FB.login(function (response) {
   			if(response.status === 'connected'){
 		document.getElementById('status');
@@ -161,11 +159,11 @@ document.getElementById('logout').style.visibility = 'hidden';
     document.getElementById('Wtext').style.visibility = 'hidden';}
 		else if(response.status === 'not_authorized'){
 			document.getElementById('status').innerHTML = 'we are not logged in';
-      //document.getElementById('logout').style.visibility = 'hidden';
+      document.getElementById('logout').style.visibility = 'hidden';
     }
 			else {
 				document.getElementById('status').innerHTML = ' You are not logged into facebook';
-        //document.getElementById('logout').style.visibility = 'hidden';
+        document.getElementById('logout').style.visibility = 'hidden';
       }
 
   	});
