--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ FB.getLoginStatus(function(response) {
     }
 			else {
 				document.getElementById('status').innerHTML = ' You are not logged into facebook';
-        document.getElementById('logout').style.visibility = 'hidden'
+        document.getElementById('logout').style.visibility = 'hidden';
       }
 			
 		})
