--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 <div id="chart"></div>
 <script>
 
+  document.getElementById('logout').style.visibility = 'hidden';
+
       var chartDiv = document.getElementById("chart");
       var svg = d3.select(chartDiv).append("svg");
 
@@ -126,11 +128,11 @@ FB.getLoginStatus(function(response) {
     document.getElementById('Wtext').style.visibility = 'hidden';}
 		else if(response.status === 'not_authorized'){
 			document.getElementById('status').innerHTML = 'we are not logged in';
-      document.getElementById('logout').style.visibility = 'hidden';
+      //document.getElementById('logout').style.visibility = 'hidden';
     }
 			else {
 				document.getElementById('status').innerHTML = ' You are not logged into facebook';
-        document.getElementById('logout').style.visibility = 'hidden';
+        //document.getElementById('logout').style.visibility = 'hidden';
       }
 			
 		})
@@ -159,11 +161,11 @@ FB.getLoginStatus(function(response) {
     document.getElementById('Wtext').style.visibility = 'hidden';}
 		else if(response.status === 'not_authorized'){
 			document.getElementById('status').innerHTML = 'we are not logged in';
-      document.getElementById('logout').style.visibility = 'hidden';
+      //document.getElementById('logout').style.visibility = 'hidden';
     }
 			else {
 				document.getElementById('status').innerHTML = ' You are not logged into facebook';
-        document.getElementById('logout').style.visibility = 'hidden';
+        //document.getElementById('logout').style.visibility = 'hidden';
       }
 
   	});
