--- a/index.html
+++ b/index.html
@@ -92,8 +92,6 @@
 <div id="chart"></div>
 <script>
 
-  document.getElementById('logout').style.visibility = 'hidden';
-
       var chartDiv = document.getElementById("chart");
       var svg = d3.select(chartDiv).append("svg");
 
@@ -120,6 +118,7 @@ banner();
 
 
 FB.getLoginStatus(function(response) {
+document.getElementById('logout').style.visibility = 'hidden';
 	if(response.status === 'connected'){
 		document.getElementById('status');
     //newPage();
@@ -153,6 +152,7 @@ FB.getLoginStatus(function(response) {
    }(document, 'script', 'facebook-jssdk'));
 
   function login(){
+document.getElementById('logout').style.visibility = 'hidden';
   	FB.login(function (response) {
   			if(response.status === 'connected'){
 		document.getElementById('status');
@@ -938,7 +938,7 @@ function fbLogout() {
 <p id="Wtext"> Welcome to the exhibition Identity 2.0. By logging into Facebook you give us premission to use your data to generate visulisations. These visulisations will help you explore your digital Identity! </p>
 <div id = "status"></div>
 <button class = "button" id="login" onclick = "login()">Login to Facebook</button>
-<button class = "button2"id="fbLogout" onclick="fbLogout()">Logout</button> 
+<button class = "button2"id="logout" onclick="fbLogout()">Logout</button> 
 <button class = "button3"id="next" onclick="endVis()">Continue</button> 
 </body>
 </html> 
