--- a/index.html
+++ b/index.html
@@ -848,6 +848,17 @@ function generalVis(){
         .style("font", "30px 'stellar'")
         .style("fill", "black");
 
+
+        //for loop controlling the opacity -- fades in the words
+      for(j=0; j < info.length; j++){
+        d3.selectAll("text")
+        .style("opacity", 0)
+        .transition()
+        .delay(function(d,i){ return 700*i; }) //controls how many come on the screen
+        .duration(100) //controls how fast is changes opacity
+        .style("opacity", 1.0)
+      }
+
   //     var newButton = canvas.append("svg:image")
   //       .attr('x', 50)
   //       .attr('y', (yStart + (spacer*195)) + 150) 
