--- a/index.html
+++ b/index.html
@@ -718,6 +718,7 @@ function generalVis(){
         .duration(6000) //controls how fast is changes opacity
         .style("opacity", 1.0);
 
+console.log(response.hometown); 
      var homeInfo = response.hometown; 
       canvas.append("text")
         .attr("x", 50)
